--- a/index.html
+++ b/index.html
@@ -17,17 +17,24 @@
 
 <body>
 	<div id="mainDiv">
+			<audio autoplay="autoplay"  controls="controls"loop="loop" preload="auto" style="position: absolute;
+			left: 90px;
+			top: 59px;"
+            src="http://pe41gencs.bkt.clouddn.com/%E9%99%86%E8%99%8E%20-%20%E6%8B%89%E8%BF%87%E5%8B%BE%E7%9A%84.mp3">
+      				你的浏览器不支持audio标签
+			</audio>
+			
 		<div id="content">
 			<div id="code">
 				<span class="comments">/**</span><br />
 				<span class="space"/><span class="comments">* We are both Fudan SSers and programmers,</span><br />
 				<span class="space"/><span class="comments">* so I write some code to celebrate our 1st anniversary.</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
-				Boy i = <span class="keyword">new</span> Boy(<span class="string">"hackerzhou"</span>);<br />
-				Girl u = <span class="keyword">new</span> Girl(<span class="string">"MaryNee"</span>);<br />
-				<span class="comments">// Nov 2, 2010, I told you I love you. </span><br />
+				Boy i = <span class="keyword">new</span> Boy(<span class="string">"WangLiuyong"</span>);<br />
+				Girl u = <span class="keyword">new</span> Girl(<span class="string">"silly"</span>);<br />
+				<span class="comments">// Nov 2, 2018, I told you I love you. </span><br />
 				i.love(u);<br />
-				<span class="comments">// Luckily, you accepted and became my girlfriend eversince.</span><br />
+				<span class="comments">// silly, you accepted and became my girlfriend eversince.</span><br />
 				u.accepted();<br />
 				<span class="comments">// Since then, I miss u every day.</span><br />
 				i.miss(u);<br />
@@ -50,26 +57,27 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						狗子, I have fallen in love with you for
+						silly, I have fallen in love with you for
 						<div id="elapseClock"></div>
 					</div>
+					
 					<div id="loveu">
 						Love u forever and ever.<br/>
-						<div class="signature">- hackerzhou</div>
+						<div class="signature">- Hangzhou</div>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div id="copyright">
 			Inspired by <a href="http://www.openrise.com/lab/FlowerPower/">FlowerPower</a> project.<br />
-			Copyright © 2011 <a href='http://hackerzhou.me'>hackerzhou.me</a> 2009-2011
+			Copyright © 2011 <a href='http://hackerzhou.me'>hackerzhou.me</a> 2014-2019
 		</div>
 	</div>
 	<script type="text/javascript">
 		var offsetX = $("#loveHeart").width() / 2;
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
-		together.setFullYear(2010, 10, 2);
+		together.setFullYear(2017, 8, 31);
 		together.setHours(20);
 		together.setMinutes(0);
 		together.setSeconds(0);
