--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					
 					<div id="loveu">
 						We will always be friends<br/>
-						<div class="signature">- Hangzhou</div>
+						<div class="signature">- WangLiuYong</div>
 					</div>
 				</div>
 			</div>
