--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
 </head>
 
 <body>
+		<iframe class='auto_msic' allow="autoplay" src="https://test-1257826148.cos.ap-guangzhou.myqcloud.com/545d_065b_5258_c75e797baa11f81cdb68e255aa5c4034.m4a"></iframe>
 	<div id="mainDiv">
-			<iframe class='auto_msic' allow="autoplay" src="https://test-1257826148.cos.ap-guangzhou.myqcloud.com/545d_065b_5258_c75e797baa11f81cdb68e255aa5c4034.m4a"></iframe>
 		<div id="content">
-
-			<div id="code">
+			<!-- <div id="code">
 				<span class="comments">/**</span><br />
 				<span class="space"/><span class="comments">* We are both Fudan SSers and programmers,</span><br />
 				<span class="space"/><span class="comments">* so I write some code to celebrate our 1st anniversary.</span><br />
@@ -46,11 +45,11 @@
 				<span class="placeholder"/><span class="comments">// I think it is an important decision</span><br />
 				<span class="placeholder"/><span class="comments">// and you should think it over.</span><br />
 				<span class="placeholder"/>isHesitate = u.thinkOver();<br />
-				}<br />
+				<br />
 				<span class="comments">// After a romantic wedding, we will live happily ever after.</span><br />
 				i.marry(u);<br />
 				i.liveHappilyWith(u);<br />
-			</div>
+			</div> -->
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
 				<div id="words">
