--- a/index.html
+++ b/index.html
@@ -108,6 +108,28 @@
 			adjustCodePosition();
 			$("#code").typewriter();
 		}
+
+
+		//音频的自动播放
+		document.addEventListener('DOMContentLoaded', function () {
+			function audioAutoPlay() {
+				var audio = document.getElementById('audio');
+					audio.play();
+				document.addEventListener("WeixinJSBridgeReady", function () {
+					audio.play();
+				}, false);
+			}
+    		audioAutoPlay();
+		});
+
+		//--创建触摸监听，当浏览器打开页面时，触摸屏幕触发事件，进行音频播放
+		document.addEventListener('touchstart', function () {
+			function audioAutoPlay() {
+				var audio = document.getElementById('audio');
+					audio.play();
+			}
+			audioAutoPlay();
+		});
 	</script>
 </body>
 </html>
