更改女孩姓名

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						silly, We've known each other for
+						XiaoSha, We've known each other for
 						<div id="elapseClock"></div>
 					</div>
 					
