--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		<span class="text">谨此纪念，我们的友情</span>
 		<button id="button">点此进入</button>
 	</div>
-	<audio id="audio" src="https://test-1257826148.cos.ap-guangzhou.myqcloud.com/545d_065b_5258_c75e797baa11f81cdb68e255aa5c4034.m4a" ></audio>
+	<audio id="audio" src="	https://test-1257826148.cos.ap-guangzhou.myqcloud.com/%E8%AF%B7%E5%85%88%E8%AF%B4%E4%BD%A0%E5%A5%BD-%E5%92%8C.mp3" ></audio>
 	<div id="mainDiv">
 		<div id="content">
 			<!-- <div id="code">
