--- a/index.html
+++ b/index.html
@@ -5,12 +5,37 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" href="./css/main.css">
 	<link href="css/default.css" type="text/css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="./css/normalize.css" />
+	<link rel="stylesheet" type="text/css" href="./css/default.1.css">
+	<link href="./css/weather.css" rel="stylesheet" type="text/css">   
 	<script type="text/javascript" src="js/help/jquery.js"></script>
 	<script type="text/javascript" src="js/help/garden.js"></script>
-    <script type="text/javascript" src="js/help/functions.js"></script>
+	<script type="text/javascript" src="js/help/functions.js"></script>
+	<style type="text/css">
+		html, body { overflow: hidden; position: relative; margin: 0; padding: 0; }
+		.htmleaf-content{
+			padding-top: 0;
+		}
+		.weather {
+			width: 50vw; height: 100vh; float: left;position: relative;
+			z-index: -2;
+        }
+        .weather.rain {
+            background: url(img/1.jpg) no-repeat center center / cover;
+            right: 50%;
+        }
+        .weather.snow {
+            background: url(img/2.jpg) no-repeat center center / cover;
+            left: 50%;
+        }
+	</style>
 </head>
 
 <body>
+	<div class="htmleaf-content">
+		<div class="weather snow"></div>
+		<div class="weather rain"></div>
+	</div>
 	<div class="mask" id="mask">
 		<span class="text">谨此纪念，我们的友情</span>
 		<button id="button">点此进入</button>
@@ -34,10 +59,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		<div id="copyright">
-			Inspired by <a href="http://www.openrise.com/lab/FlowerPower/">FlowerPower</a> project.<br />
-			Copyright © 2018 <a href='https://github.com/wangliuyong'>WangLiuYong.com</a> 2019-5200
 		</div>
 	</div>
 	<script type="text/javascript" src='./js/main.js'></script>
