--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 	<div id="mainDiv">
 		<div id="content">
 			<div id="loveHeart">
-				<img id='img1' class="img_no_heart" src="https://test-1257826148.cos.ap-guangzhou.myqcloud.com/man.jpg" alt="">
-				<img id='img2' class="img_no_heart" src="https://test-1257826148.cos.ap-guangzhou.myqcloud.com/woman.jpg" alt="">
+				<img id='img1' class="img_no_heart" src="https://test-1257826148.cos.ap-guangzhou.myqcloud.com/boy.jpghttps://test-1257826148.cos.ap-guangzhou.myqcloud.com/boy.jpg" alt="">
+				<img id='img2' class="img_no_heart" src="https://test-1257826148.cos.ap-guangzhou.myqcloud.com/girl.jpg" alt="">
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
